app/PokeScout/common/nfc/src/main/java/com/example/nfc/error/NfcReadError.kt
package com.example.nfc.error

sealed class NfcReadError {
    data object NotNdefFormattedError: NfcReadError()
}